updated the launch file to use the correct main file (for VS code). Additionally added a Controller part that has the text output part, where call logs can be depicted. Also changed colors of callers.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,10 +14,10 @@
         // }
 
         {
-            "name": "Python: main_gui.py",
+            "name": "Python: main.py",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/main_gui.py",
+            "program": "${workspaceFolder}/main.py",
             "console": "integratedTerminal"
         }
     ]
